--- a/reproducible_done.Rmd
+++ b/reproducible_done.Rmd
@@ -1072,6 +1072,72 @@ for(a in alpha_value[3]){
 
 ```
 
+## Step 14d2: Now getting the ideal combo at the optimal gene size (2,500 genes) for CC Singlecell MS on COAD
+```{r ideal combo for cc singlecell ms on COAD}
+combo_used <- c("800_10", "800_110", "800_210", "800_310", "800_410", "800_510", "800_610", "800_710", "800_810", "800_910", "800_1010",
+                "700_10", "700_110", "700_210", "700_310", "700_410", "700_510", "700_610", "700_710", "700_810", "700_910", "700_1010")
+
+sde.genes <- readRDS("Data/Reproducible-results/Rmarkdown/Outputs/sde_colon_and_rectal_cancer.rds")
+cox_df <- readRDS("Data/Reproducible-results/Rmarkdown/Data/coad_df_finished.rds")
+
+alpha_value <- c(0.0,0.5,1.0)
+
+mirna_used <- gsub(combo_used[1], pattern = "_10", replacement = "")
+data_set <- "coad"
+
+
+for(a in alpha_value[3]){
+  top_cindices <- c()
+  for(c in combo_used){
+    my_cindices <- rep(0, 11)
+    counter <- 1
+    load(file = paste0("/home/awillems/Projects/CC_Singlecell/TCGA-COAD/Data/Mirna/Inputs/",c,"_targets.RData"), verbose = TRUE)
+    mirna.genes <- mirna.ranking
+    mirna_sde_optimized <- two_weight_optimizer(first.metric = mirna.genes,
+                                                second.metric = sde.genes,
+                                                my.filename = paste0("Optimizations/Optimization_",c,"_targets_cc_singlecell_ms_",a,"_alpha_",data_set,".rds"))
+
+
+
+
+
+
+
+    for(ms in mirna_sde_optimized){
+        cox_model <- cox_model_fitter(my.seed = 1,
+                                    my.alpha = a,
+                                    my.dataset = "COAD",
+                                    cox.predictors = ms,
+                                    cox.df = cox_df,
+                                    gene.num = 2500,
+                                    tumor.stage = FALSE,
+                                    tumor.n = FALSE,
+                                    tumor.m = FALSE,
+                                    my.filename = paste0("cc_singlecell_ms_ideal_mirna_combo_coefs.csv"))
+
+      #Getting the top concordance index from the cross validation and then rounding
+      #it to 4 digits to follow cv.glmnet reporting convention. Finally, we update
+      #the c_index list with the result
+      current_cindex <- round(cox_model$CV$cvm[cox_model$CV$index[1]], digits = 4)
+      my_cindices[counter] <- current_cindex
+      counter <- counter + 1
+
+    }
+
+    top_cindex <-max(my_cindices)
+    top_index <- which(my_cindices==top_cindex)
+    print(top_index)
+    print(top_cindex)
+    top_index_used <- top_index[1]
+    top_cindices <- c(top_cindices, top_cindex)
+  }
+
+  write.csv(top_cindices, file = paste0("cc_singlecell_ms_coad_df_ideal_mirna_combo.csv"))
+  write.csv(my_cindices, file = paste0("cc_singlecell_ms_coad_df_all_mirna_combo_performance_data.csv"))
+}
+```
+
+
 
 ## Step 14e: Getting ideal gene size for CC Singlecell MM on COAD
 ```{r getting ideal cc singlecell ms (miRNA + SDE) gene performance COAD}
